fix: playground overflow

--- a/data/components/playground/index.module.css
+++ b/data/components/playground/index.module.css
@@ -1,5 +1,5 @@
 .hide {
-  position: absolute;
+  position: fixed;
   left: 99999px;
 }
 
